[gd_scene load_steps=20 format=3 uid="uid://isqpaors7nvd"]

[ext_resource type="Script" path="res://scripts/npc.gd" id="1_vir3x"]
[ext_resource type="Texture2D" uid="uid://cu4hvfusbokkj" path="res://npc's/NPC_Professor01.png" id="2_px7d1"]
[ext_resource type="PackedScene" uid="uid://8nc3cepgn0jo" path="res://scenes/dialogo.tscn" id="3_6ke8d"]
[ext_resource type="PackedScene" uid="uid://bp5wn1hqq63m4" path="res://scenes/npc_quest.tscn" id="4_pvc4j"]
[ext_resource type="PackedScene" uid="uid://b4ctegpnk6l1r" path="res://scenes/dialogo_de_missao.tscn" id="5_311hx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_07gfc"]
atlas = ExtResource("2_px7d1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlfff"]
atlas = ExtResource("2_px7d1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5p11"]
atlas = ExtResource("2_px7d1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpoxb"]
atlas = ExtResource("2_px7d1")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcoej"]
atlas = ExtResource("2_px7d1")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wfq2"]
atlas = ExtResource("2_px7d1")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hihdf"]
atlas = ExtResource("2_px7d1")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xa7v"]
atlas = ExtResource("2_px7d1")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4b1cs"]
atlas = ExtResource("2_px7d1")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a314x"]
atlas = ExtResource("2_px7d1")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_udak2"]
atlas = ExtResource("2_px7d1")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ahl5"]
atlas = ExtResource("2_px7d1")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_u13ja"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_07gfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlfff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5p11")
}],
"loop": true,
"name": &"baixo",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpoxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcoej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wfq2")
}],
"loop": true,
"name": &"cima",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hihdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xa7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4b1cs")
}],
"loop": true,
"name": &"direita",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a314x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udak2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ahl5")
}],
"loop": true,
"name": &"esquerda",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_dvd5g"]
radius = 59.0085

[node name="NPC01" type="CharacterBody2D" groups=["NPC"]]
light_mask = 4
visibility_layer = 3
y_sort_enabled = true
position = Vector2(0, 12)
collision_mask = 6
script = ExtResource("1_vir3x")

[node name="AnimatedNPC" type="AnimatedSprite2D" parent="."]
light_mask = 4
visibility_layer = 3
y_sort_enabled = true
position = Vector2(0, -18)
sprite_frames = SubResource("SpriteFrames_u13ja")
animation = &"esquerda"
offset = Vector2(0, -7)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
light_mask = 4
visibility_layer = 3
y_sort_enabled = true
position = Vector2(-1, -7)
polygon = PackedVector2Array(-4, -12, 7, -12, 7, -3, 2, -3, -4, -3)

[node name="chat_detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chat_detector"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_dvd5g")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Dialogo" parent="." instance=ExtResource("3_6ke8d")]

[node name="NPC_Quest" parent="." instance=ExtResource("4_pvc4j")]

[node name="Dialogo_de_missao" parent="." instance=ExtResource("5_311hx")]
