[gd_scene load_steps=22 format=3 uid="uid://c3jnjjc5rwikg"]

[ext_resource type="Script" path="res://scripts/npc.gd" id="1_ksind"]
[ext_resource type="Texture2D" uid="uid://cu4hvfusbokkj" path="res://assets/sprites/characters/npcs/hubnerCharacter.png" id="1_vxhxr"]
[ext_resource type="PackedScene" uid="uid://8nc3cepgn0jo" path="res://scenes/dialog.tscn" id="3_qlnbr"]
[ext_resource type="PackedScene" uid="uid://bp5wn1hqq63m4" path="res://scenes/missionNpc.tscn" id="4_moi7k"]
[ext_resource type="PackedScene" uid="uid://b4ctegpnk6l1r" path="res://scenes/missionDialog.tscn" id="5_0irik"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1f4j7"]
size = Vector2(10, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfuqg"]
atlas = ExtResource("1_vxhxr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bu5ue"]
atlas = ExtResource("1_vxhxr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nbls"]
atlas = ExtResource("1_vxhxr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o53cn"]
atlas = ExtResource("1_vxhxr")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kqin"]
atlas = ExtResource("1_vxhxr")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ql2h0"]
atlas = ExtResource("1_vxhxr")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha018"]
atlas = ExtResource("1_vxhxr")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lca5v"]
atlas = ExtResource("1_vxhxr")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4s44"]
atlas = ExtResource("1_vxhxr")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_77rhp"]
atlas = ExtResource("1_vxhxr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wh4t"]
atlas = ExtResource("1_vxhxr")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kw5tx"]
atlas = ExtResource("1_vxhxr")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwndf"]
atlas = ExtResource("1_vxhxr")
region = Rect2(64, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_autnx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfuqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bu5ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nbls")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o53cn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kqin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ql2h0")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha018")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lca5v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4s44")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_77rhp")
}],
"loop": true,
"name": &"stop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wh4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kw5tx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwndf")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gg0x4"]
radius = 59.0085

[node name="Npc" type="CharacterBody2D" groups=["NPC"]]
light_mask = 4
visibility_layer = 3
z_index = 2
y_sort_enabled = true
collision_layer = 4
collision_mask = 3
script = ExtResource("1_ksind")

[node name="NpcColision" type="CollisionShape2D" parent="."]
light_mask = 4
visibility_layer = 3
y_sort_enabled = true
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_1f4j7")

[node name="Animated" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_autnx")
animation = &"stop"

[node name="ChatDetector" type="Area2D" parent="."]

[node name="ChatColision" type="CollisionShape2D" parent="ChatDetector"]
light_mask = 4
visibility_layer = 3
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_gg0x4")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Dialog" parent="." instance=ExtResource("3_qlnbr")]
light_mask = 4
visibility_layer = 3

[node name="MissionNpc" parent="." instance=ExtResource("4_moi7k")]

[node name="MissionDialog" parent="." instance=ExtResource("5_0irik")]

[connection signal="body_entered" from="ChatDetector" to="." method="_on_chat_detector_body_entered"]
[connection signal="body_exited" from="ChatDetector" to="." method="_on_chat_detector_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="dialogo_acabou" from="Dialog" to="." method="_on_dialogo_dialogo_acabou"]
[connection signal="dialogo_missao_acabou" from="MissionDialog" to="." method="_on_dialogo_de_missao_dialogo_missao_acabou"]
